--- a/style.css
+++ b/style.css
@@ -543,3 +543,34 @@ table tr:nth-child(even) {
     color: #C71585;
     margin: 0;
 }
+/* Stijlen voor Unit 6 Practice Pagina */
+.conversation p {
+    line-height: 2; /* Geeft meer ruimte voor de invulvelden */
+}
+
+.fill-in-input-small {
+    border: none;
+    border-bottom: 2px solid #DB7093;
+    background: transparent;
+    text-align: center;
+    padding: 2px;
+    font-size: 1em;
+    width: 100px; /* Kleinere breedte voor losse woorden */
+}
+
+.speaking-questions {
+    list-style-type: decimal;
+    padding-left: 20px;
+}
+
+.speaking-questions li {
+    margin-bottom: 10px;
+    line-height: 1.5;
+}
+/* Stijl voor scheidingslijn in werkboek */
+hr.exercise-divider {
+    border: 0;
+    height: 1px;
+    background-color: #FFDDE1;
+    margin: 30px 0;
+}
